--- a/notebook/2. Feature Engineering & Model Used car prediction.ipynb
+++ b/notebook/2. Feature Engineering & Model Used car prediction.ipynb
@@ -34,7 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15411, 13)\n"
+      "(15411, 14)\n"
      ]
     }
    ],
@@ -47,7 +47,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "pd.pandas.set_option(\"display.max_columns\", None)\n",
     "# Create Dataframe\n",
-    "df = pd.read_csv(\"./data/cardekho_dataset.csv\", index_col=[0])\n",
+    "df = pd.read_csv(\"./data/cardekho_dataset.csv\")\n",
     "\n",
     "# Print shape of dataset\n",
     "print(df.shape)"
@@ -97,6 +97,7 @@
     {
      "data": {
       "text/plain": [
+       "Unnamed: 0           0\n",
        "car_name             0\n",
        "brand                0\n",
        "model                0\n",
@@ -157,7 +158,7 @@
     {
      "data": {
       "text/plain": [
-       "167"
+       "0"
       ]
      },
      "execution_count": 3,
@@ -213,6 +214,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>car_name</th>\n",
        "      <th>brand</th>\n",
        "      <th>model</th>\n",
@@ -230,7 +232,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4845</th>\n",
+       "      <th>3799</th>\n",
+       "      <td>4845</td>\n",
        "      <td>Ferrari GTC4Lusso</td>\n",
        "      <td>Ferrari</td>\n",
        "      <td>GTC4Lusso</td>\n",
@@ -250,14 +253,14 @@
        "</div>"
       ],
       "text/plain": [
-       "               car_name    brand      model  vehicle_age  km_driven  \\\n",
-       "4845  Ferrari GTC4Lusso  Ferrari  GTC4Lusso            2       3800   \n",
+       "      Unnamed: 0           car_name    brand      model  vehicle_age  \\\n",
+       "3799        4845  Ferrari GTC4Lusso  Ferrari  GTC4Lusso            2   \n",
        "\n",
-       "     seller_type fuel_type transmission_type  mileage  engine  max_power  \\\n",
-       "4845      Dealer    Petrol         Automatic      4.0    3855      601.0   \n",
+       "      km_driven seller_type fuel_type transmission_type  mileage  engine  \\\n",
+       "3799       3800      Dealer    Petrol         Automatic      4.0    3855   \n",
        "\n",
-       "      seats  selling_price  \n",
-       "4845      4       39500000  "
+       "      max_power  seats  selling_price  \n",
+       "3799      601.0      4       39500000  "
       ]
      },
      "execution_count": 4,
@@ -284,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(['brand','model'], axis=1, inplace=True)"
+    "df.drop(['brand','model', 'Unnamed: 0'], axis=1, inplace=True)"
    ]
   },
   {
@@ -821,7 +824,7 @@
    "metadata": {},
    "source": [
     "* **Split Dataframe to X and y**\n",
-    "* **Here we set a variable X i.e, independent columns, and a variable y i.e, dependent column as the “ProdTaken” column.**\n"
+    "* **Here we set a variable X i.e, independent columns, and a variable y i.e, dependent column as the “selling price” column.**\n"
    ]
   },
   {
